@@ -15,21 +15,21 @@ import org.jboss.shrinkwrap.api.spec.WebArchive;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.wildfly.testing.junit.extension.annotation.DeploymentProducer;
-import org.wildfly.testing.junit.extension.annotation.Domain;
 import org.wildfly.testing.junit.extension.annotation.DomainServer;
 import org.wildfly.testing.junit.extension.annotation.RequestPath;
+import org.wildfly.testing.junit.extension.annotation.ServerGroup;
 import org.wildfly.testing.junit.extension.annotation.ServerResource;
-import org.wildfly.testing.junit.extension.annotation.WildFlyTest;
+import org.wildfly.testing.junit.extension.annotation.WildFlyDomainTest;
 
 /**
  *
  * @author <a href="mailto:jperkins@ibm.com">James R. Perkins</a>
  */
-@WildFlyTest
-@Domain("main-server-group")
+@WildFlyDomainTest
 public class DomainDeploymentIT {
 
     @DeploymentProducer
+    @ServerGroup("main-server-group")
     public static WebArchive createDeployment() {
         return ShrinkWrap.create(WebArchive.class)
                 .addClasses(TestServlet.class);
@@ -44,7 +44,7 @@ public class DomainDeploymentIT {
     public void validateUri() {
         Assertions.assertNotNull(uri);
         Assertions.assertTrue(uri.toString().endsWith("/test"),
-                () -> String.format("Expected URI to contain the request path /test at the end: %s", uri));
+                () -> "Expected URI to contain the request path /test at the end: %s".formatted(uri));
     }
 
     @Test
@@ -55,7 +55,7 @@ public class DomainDeploymentIT {
                 .build();
         final HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
         Assertions.assertEquals(200, response.statusCode(),
-                () -> String.format("Expected HTTP status code %d: %s", response.statusCode(), response.body()));
+                () -> "Expected HTTP status code %d: %s".formatted(response.statusCode(), response.body()));
         Assertions.assertTrue(response.body().startsWith("Test"));
     }
 }
