@@ -20,21 +20,17 @@ import org.jboss.shrinkwrap.api.spec.WebArchive;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.wildfly.plugin.tools.server.ServerManager;
-import org.wildfly.testing.junit.extension.annotation.GenerateDeployment;
 import org.wildfly.testing.junit.extension.annotation.ManualMode;
 import org.wildfly.testing.junit.extension.annotation.ServerResource;
-import org.wildfly.testing.junit.extension.annotation.WildFlyTest;
 
 /**
  *
  * @author <a href="mailto:jperkins@ibm.com">James R. Perkins</a>
  */
-@WildFlyTest
 @ManualMode(true)
 abstract class AbstractAutoStartTest implements ManualModeTest {
 
-    @GenerateDeployment
-    public static void createDeployment(final WebArchive war) {
+    public static void createDefaultDeployment(final WebArchive war) {
         war.addClasses(TestServlet.class);
     }
 
@@ -52,7 +48,7 @@ abstract class AbstractAutoStartTest implements ManualModeTest {
         final var uri = getUri();
         Assertions.assertNotNull(uri);
         Assertions.assertTrue(uri.toString().endsWith("/test"),
-                () -> String.format("Expected URI to contain the request path /test at the end: %s", uri));
+                () -> "Expected URI to contain the request path /test at the end: %s".formatted(uri));
     }
 
     @Test
@@ -63,7 +59,7 @@ abstract class AbstractAutoStartTest implements ManualModeTest {
                 .build();
         final HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
         Assertions.assertEquals(200, response.statusCode(),
-                () -> String.format("Expected HTTP status code %d for %s: %s", response.statusCode(), getUri(),
+                () -> "Expected HTTP status code %d for %s: %s".formatted(response.statusCode(), getUri(),
                         response.body()));
         Assertions.assertTrue(response.body().startsWith("Test"));
     }
