@@ -51,7 +51,7 @@ public class ModuleBuilderTest {
                 .build();
         Assertions.assertNotNull(moduleDescription);
         final var jarFile = moduleDescription.modulePath().resolve("test-module.jar");
-        Assertions.assertTrue(Files.exists(jarFile), () -> String.format("Module %s does not exist", moduleDescription.name()));
+        Assertions.assertTrue(Files.exists(jarFile), () -> "Module %s does not exist".formatted(moduleDescription.name()));
         // Open the JAR and check for the expected files
         try (FileSystem fs = jarFs(jarFile)) {
             final var beansXml = fs.getPath("/META-INF/beans.xml");
@@ -70,7 +70,7 @@ public class ModuleBuilderTest {
                 .build();
         Assertions.assertNotNull(moduleDescription);
         final var jarFile = moduleDescription.modulePath().resolve("test-module.jar");
-        Assertions.assertTrue(Files.exists(jarFile), () -> String.format("Module %s does not exist", moduleDescription.name()));
+        Assertions.assertTrue(Files.exists(jarFile), () -> "Module %s does not exist".formatted(moduleDescription.name()));
         // Open the JAR and check for the expected files
         try (FileSystem fs = jarFs(jarFile)) {
             final var beansXml = fs.getPath("/META-INF/beans.xml");
@@ -97,7 +97,7 @@ public class ModuleBuilderTest {
                 .build();
         Assertions.assertNotNull(moduleDescription);
         final var jarFile = moduleDescription.modulePath().resolve("test-module.jar");
-        Assertions.assertTrue(Files.exists(jarFile), () -> String.format("Module %s does not exist", moduleDescription.name()));
+        Assertions.assertTrue(Files.exists(jarFile), () -> "Module %s does not exist".formatted(moduleDescription.name()));
         // Open the JAR and check for the expected files
         try (FileSystem fs = jarFs(jarFile)) {
             final var beansXml = fs.getPath("/META-INF/beans.xml");
@@ -122,9 +122,9 @@ public class ModuleBuilderTest {
 
         final Elements moduleAliasElement = document.select("module-alias");
         Assertions.assertEquals("org.wildfly.test.alias", moduleAliasElement.attr("name"),
-                () -> String.format("module-alias with name org.wildfly.test.alias does not exist in: %s", moduleAliasElement));
+                () -> "module-alias with name org.wildfly.test.alias does not exist in: %s".formatted(moduleAliasElement));
         Assertions.assertEquals(target.name(), moduleAliasElement.attr("target-name"),
-                () -> String.format("module-alias with target-name %s does not exist in: %s", target.name(),
+                () -> "module-alias with target-name %s does not exist in: %s".formatted(target.name(),
                         moduleAliasElement));
 
         assertDeleted(alias, false);
@@ -161,36 +161,36 @@ public class ModuleBuilderTest {
         Assertions.assertFalse(moduleElement.isEmpty(), "Module dependencies should not be empty");
         // This should be an exported dependency
         Assertions.assertEquals("true", moduleElement.attr("export"),
-                () -> String.format("Expected dependency to be exported: %s", moduleElement));
+                () -> "Expected dependency to be exported: %s".formatted(moduleElement));
         // The services should be imported
         Assertions.assertEquals("import", moduleElement.attr("services"),
-                () -> String.format("Expected the dependencies services to be imported: %s", moduleElement));
+                () -> "Expected the dependencies services to be imported: %s".formatted(moduleElement));
         // This should be an optional dependency
         Assertions.assertEquals("true", moduleElement.attr("optional"),
-                () -> String.format("Expected dependency to be optional: %s", moduleElement));
+                () -> "Expected dependency to be optional: %s".formatted(moduleElement));
 
         // We should have two import include filters and one import exclude
         final Elements importIncludes = moduleElement.select("imports > include");
         Assertions.assertEquals(2, importIncludes.size(),
-                () -> String.format("Expected 2 import include filters on %s", moduleElement));
+                () -> "Expected 2 import include filters on %s".formatted(moduleElement));
         // Check the paths for the includes
         assertSelector(importIncludes, "[path=\"META-INF/services\"]");
         assertSelector(importIncludes, "[path=\"META-INF/config\"]");
         final Elements importExcludes = moduleElement.select("imports > exclude");
         Assertions.assertEquals(1, importExcludes.size(),
-                () -> String.format("Expected 1 import exclude filter on %s", moduleElement));
+                () -> "Expected 1 import exclude filter on %s".formatted(moduleElement));
         // Check the paths for the excludes
         assertSelector(importExcludes, "[path=\"META-INF/maven\"]");
 
         // We should have 1 export include filter and two export excludes
         final Elements exportIncludes = moduleElement.select("exports > include");
         Assertions.assertEquals(1, exportIncludes.size(),
-                () -> String.format("Expected 1 export include filter on %s", moduleElement));
+                () -> "Expected 1 export include filter on %s".formatted(moduleElement));
         // Check the paths for the includes
         assertSelector(exportIncludes, "[path=\"META-INF/config\"]");
         final Elements exportExcludes = moduleElement.select("exports > exclude");
         Assertions.assertEquals(2, exportExcludes.size(),
-                () -> String.format("Expected 2 export exclude filters on %s", moduleElement));
+                () -> "Expected 2 export exclude filters on %s".formatted(moduleElement));
         // Check the paths for the excludes
         assertSelector(exportExcludes, "[path=\"META-INF/maven\"]");
         assertSelector(exportExcludes, "[path=\"META-INF/internal\"]");
@@ -213,17 +213,17 @@ public class ModuleBuilderTest {
             throws IOException {
         final Path moduleXml = moduleDescription.modulePath().resolve("module.xml");
         Assertions.assertTrue(Files.exists(moduleXml),
-                () -> String.format("Module %s does not exist", moduleDescription.name()));
+                () -> "Module %s does not exist".formatted(moduleDescription.name()));
         final Document document = Jsoup.parse(Files.readString(moduleXml), Parser.xmlParser());
 
         // Check that we have the expected resource roots
         if (!expectedResourceRoots.isEmpty()) {
             final Elements resourceRoots = document.select("resource-root");
             Assertions.assertEquals(expectedResourceRoots.size(), resourceRoots.size(),
-                    () -> String.format("Expected %d resource roots, found %s", expectedResourceRoots.size(), resourceRoots));
+                    () -> "Expected %d resource roots, found %s".formatted(expectedResourceRoots.size(), resourceRoots));
             for (String expectedResourceRoot : expectedResourceRoots) {
                 Assertions.assertEquals(1, resourceRoots.select("[path=\"" + expectedResourceRoot + "\"]").size(),
-                        String.format("Failed to find <resource-root path=\"%s\"/> in %s", expectedResourceRoot,
+                        "Failed to find <resource-root path=\"%s\"/> in %s".formatted(expectedResourceRoot,
                                 resourceRoots));
             }
         }
@@ -232,7 +232,7 @@ public class ModuleBuilderTest {
         for (String expectedDependency : expectedDependencies) {
             final Elements dependencies = document.select("dependencies > module[name=\"" + expectedDependency + "\"]");
             Assertions.assertEquals(1, dependencies.size(),
-                    () -> String.format("Expected 1 dependency, found %s", dependencies));
+                    () -> "Expected 1 dependency, found %s".formatted(dependencies));
         }
         return document;
     }
@@ -243,7 +243,7 @@ public class ModuleBuilderTest {
 
     private static void assertSelector(final Elements element, final String selector, final Object context) {
         Assertions.assertFalse(element.select(selector)
-                .isEmpty(), () -> String.format("Expected %s in %s", selector, context));
+                .isEmpty(), () -> "Expected %s in %s".formatted(selector, context));
     }
 
     private static void assertDeleted(final ModuleDescription moduleDescription) {
@@ -256,7 +256,7 @@ public class ModuleBuilderTest {
             assertRecursiveDelete(moduleDescription.modulePath());
         } else {
             Assertions.assertTrue(Files.notExists(moduleDescription.modulePath()),
-                    () -> String.format("Module %s should have been deleted.", moduleDescription.name()));
+                    () -> "Module %s should have been deleted.".formatted(moduleDescription.name()));
         }
     }
 
@@ -266,7 +266,7 @@ public class ModuleBuilderTest {
             return;
         }
         Assertions.assertTrue(Files.notExists(path),
-                () -> String.format("Path %s should have been removed, but still exists.", path));
+                () -> "Path %s should have been removed, but still exists.".formatted(path));
         assertRecursiveDelete(path.getParent());
     }
 
